--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  gap: 32px;;
+  gap: 32px;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
